juste un peu de margin en moins

--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -26,7 +26,7 @@
        Créez votre profil société
       </div>
       <div class='step-card-body'>
-        Complétez le profil de votre société et renseignez les informations relatives à son capital. Nom, adresse, capital social, valeur nominale des actions et c'est parti !"
+        Complétez le profil de votre société et renseignez les informations relatives à son capital. Nom, adresse, capital social, valeur nominale des actions et c'est parti !
       </div>
     </div>
 
@@ -38,7 +38,7 @@
         Renseignez votre opération
       </div>
       <div class='step-card-body'>
-        Définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société. <br>Invitez vos investisseurs et mettez à leur disposition une DataRoom.
+        Définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société. <br>Invitez vos investisseurs et mettez à leur disposition une Data Room.
       </div>
     </div>
 
@@ -47,7 +47,7 @@
       <div style="background-color: #F3BE69; color: white;" class="rond">
         <p>3</p>
       </div>
-        Procédez au Closing
+        Procédez au closing
       </div>
       <div class='step-card-body'>
         Dès que tous vos investisseurs ont confirmé leur participation, passez au closing : génération automatique des documents et signature électronique.
