--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -29,10 +29,10 @@
 
     <div class="sc-landing-feature">
       <i class="fas fa-compass"></i>
-      <h5><strong>Une levée de fonds simplifiée</strong></h5>
+      <h5><strong>Une levée de fonds <br> simplifiée</strong></h5>
       <div class='landing-inner-text'>
         <p>
-          Nous vous accompagnons étape par étape dans votre levée. <br> Chaque étape est expliquée et détaillée - avec tous les documents adaptés à votre situation.
+          Nous vous accompagnons étape par étape dans votre levée : chaque étape est expliquée et détaillée - avec tous les documents adaptés à votre situation.
         </p>
       </div>
     </div>
