nouvelles couleurs pour la landing

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -26,17 +26,17 @@
 
 <div class="wrapper">
   <div class="banner-title">
-    <h2>Ce que nous vous proposons ...</h2>
+    Ce que nous vous proposons ...
   </div>
   <div class = banner-features>
     <div class="sc-landing-feature">
       <i class="fas fa-compass"></i>
       <div class="landing-inner-title">
-        <h5><strong>Vos opérations sur capital <br> simplifiées</strong></h5>
+        <h5>Votre opération sur capital <br> simplifiée</h5>
       </div>
       <div class='landing-inner-text'>
         <p>
-          Nous vous accompagnons étape par étape dans votre opération : chaque étape est expliquée et détaillée - avec tous les documents adaptés à votre situation
+          Nous vous accompagnons étape par étape dans votre opération : chaque étape est expliquée et détaillée - avec tous les documents adaptés à votre situation.
         </p>
       </div>
     </div>
@@ -44,11 +44,11 @@
     <div class="sc-landing-feature">
       <i class="fas fa-clipboard-check"></i>
       <div class="landing-inner-title">
-        <h5><strong>Un processus unifié et centralisé</strong></h5>
+        <h5>Un processus unifié et centralisé</h5>
       </div>
       <div class='landing-inner-text'>
         <p>
-          Une plateforme unique, un partage d’informations transparent avec vos investisseurs, une documentation toujours à jour
+          Une plateforme unique, un partage d’informations transparent avec vos investisseurs et une documentation toujours à jour.
         </p>
       </div>
     </div>
@@ -56,11 +56,11 @@
     <div class="sc-landing-feature">
       <i class="fas fa-tachometer-alt"></i>
       <div class="landing-inner-title">
-        <h5><strong>Une solution moins chère et plus rapide</strong></h5>
+        <h5>Une solution moins chère et plus rapide</h5>
       </div>
       <div class='landing-inner-text'>
         <p>
-          Toutes les étapes sont gérées par votre outil, pas de recours à des prestataires externes générant coûts et complexité
+          Toutes les étapes sont gérées par notre outil : pas de recours à des prestataires externes générant coûts et complexité.
         </p>
       </div>
     </div>
