--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -69,12 +69,10 @@
 </div>
 
 <div class="landing-footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+  <div class='footer-logo'>
+    <%= image_tag "eclair.png", id: "footer-logo"%>
   </div>
-  <div class="footer-copyright">
-
+  <div class="footer-text">
+    SUPERCLOSING - 2019
   </div>
 </div>
