--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -103,19 +103,11 @@ body {
   align-items: center;
   justify-content: flex-end;
   height: 50px;
-  padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  padding: 0px 50px 0px 50px;
+  color: white;
+  font-size: 15px;
 }
-.footer-links {
-  display: flex;
-}
-.footer-links a {
-  color: #ffac30;
-  opacity: 1;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 0.5;
+#footer-logo {
+  height: 40px;
+  margin-right: 10px;
 }
