--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -26,7 +26,7 @@
 
 <div class="wrapper">
   <div class="banner-title">
-    Ce que nous vous proposons ...
+    Ce que nous vous proposons
   </div>
   <div class = banner-features>
     <div class="sc-landing-feature">
@@ -64,7 +64,14 @@
         </p>
       </div>
     </div>
-
+  </div>
+  <div class="landing-video">
+   <div class="banner-title">
+    En images - Le Wagon Demo Day
+   </div>
+   <div id="embed-demoday-video">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/ICliaJ8Krpg?start=2862" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
   </div>
 </div>
 
