--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,11 +1,11 @@
 <div class="wrapper">
   <div class="sc-banner" style="background-image: linear-gradient(-225deg, rgba(156, 149, 149, 0.3) 0%, rgba(51, 63, 43, 0.3) 70%), url(<%= asset_path "background.jpg" %>);">
 
-   <!--  <div class="signin">
-      <%#= link_to new_user_session_path do %>
+    <div class="signin">
+      <%= link_to new_user_session_path do %>
         <button type="button" class="btn btn-landing-signin">Connexion</button>
-      <%# end %>
-    </div> -->
+      <% end %>
+    </div>
 
     <div class="banner-content">
       <div>
