--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -16,9 +16,9 @@
         <p>Votre opération sur capital <span id="typed_text"></span></p>
       </div>
 
-        <%#= link_to new_user_registration_path do %>
+        <%= link_to new_user_registration_path do %>
          <a class="btn btn-landing-signup" href="mailto:contact@superclosing.com?subject=Demande%20de%20renseignements&#038;body=Bonjour,%20je%20souhaiterais%20avoir%20des%20renseignements%20sur%20votre%20service.%20Merci,">Découvrir la solution !</a>
-      <%# end %>
+      <% end %>
 
       </div>
   </div>
